{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 170,
  "lineage": "86e4a905-47aa-dd64-8a0f-c560f8d14905",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "Final_LB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:612350829261:loadbalancer/app/final-loadbalancer/4df933fd12932c57",
            "arn_suffix": "app/final-loadbalancer/4df933fd12932c57",
            "dns_name": "final-loadbalancer-772240386.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:612350829261:loadbalancer/app/final-loadbalancer/4df933fd12932c57",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "final-loadbalancer",
            "security_groups": [
              "sg-0e3a914882008f2e4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a6b0a4c5bc3a1e31"
              },
              {
                "subnet_id": "subnet-0f714bb3e3ddee3fa"
              }
            ],
            "subnets": [
              "subnet-0a6b0a4c5bc3a1e31",
              "subnet-0f714bb3e3ddee3fa"
            ],
            "tags": {
              "Name": "production loadbalancer"
            },
            "vpc_id": "vpc-0cb09f595170f8e93",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listner",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:612350829261:listener/app/final-loadbalancer/4df933fd12932c57/ec13bbf6d5de8fcc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:612350829261:targetgroup/final-tg/5ad60b0817a1902a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:612350829261:listener/app/final-loadbalancer/4df933fd12932c57/ec13bbf6d5de8fcc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:612350829261:loadbalancer/app/final-loadbalancer/4df933fd12932c57",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.Final_LB",
            "aws_alb_target_group.final_target_group",
            "aws_alb_target_group_attachment.target_group_attachment",
            "aws_instance.PublicEC2",
            "aws_security_group.lb_security_group",
            "aws_security_group.public_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "final_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:612350829261:targetgroup/final-tg/5ad60b0817a1902a",
            "arn_suffix": "targetgroup/final-tg/5ad60b0817a1902a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:612350829261:targetgroup/final-tg/5ad60b0817a1902a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "final-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "target_group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "target_group_attachment",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:612350829261:targetgroup/final-tg/5ad60b0817a1902a-20201212233004964500000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:612350829261:targetgroup/final-tg/5ad60b0817a1902a",
            "target_id": "i-0493eb56c273963e1"
          },
          "dependencies": [
            "aws_alb_target_group.final_target_group",
            "aws_instance.PublicEC2",
            "aws_security_group.public_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:612350829261:targetgroup/final-tg/5ad60b0817a1902a-20201212233004732000000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:612350829261:targetgroup/final-tg/5ad60b0817a1902a",
            "target_id": "i-01136a1df8ad53d6c"
          },
          "dependencies": [
            "aws_alb_target_group.final_target_group",
            "aws_instance.PublicEC2",
            "aws_security_group.public_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d53633129b77e9dd",
            "domain": "vpc",
            "id": "eipalloc-0119cd5e01181c2fc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07cff9b3933a8acd6",
            "private_dns": "ip-10-0-0-20.ec2.internal",
            "private_ip": "10.0.0.20",
            "public_dns": "ec2-54-158-56-242.compute-1.amazonaws.com",
            "public_ip": "54.158.56.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my_nat_eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_vpc.vpcmain"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fd4dd19d6f1cddaf",
            "domain": "vpc",
            "id": "eipalloc-085565abc966d2744",
            "network_border_group": "us-east-1",
            "network_interface": "eni-099530f7395c782d0",
            "private_dns": "ip-10-0-1-75.ec2.internal",
            "private_ip": "10.0.1.75",
            "public_dns": "ec2-184-73-105-0.compute-1.amazonaws.com",
            "public_ip": "184.73.105.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my_nat_eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PrivateEC2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:612350829261:instance/i-096bd72b136589fe8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096bd72b136589fe8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyEC2KP_Priv(NEW)",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c21d6255be7ba156",
            "private_dns": "ip-10-0-2-16.ec2.internal",
            "private_ip": "10.0.2.16",
            "public_dns": "ec2-34-201-64-219.compute-1.amazonaws.com",
            "public_ip": "34.201.64.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00922c5ac4c68b782",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ffeed2ecf0e3748d",
            "tags": {
              "Name": "App-Server-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08de806cb4423bee5"
            ]
          },
          "dependencies": [
            "aws_security_group.private_security_group",
            "aws_security_group.public_security_group",
            "aws_subnet.private_subnets",
            "aws_vpc.vpcmain"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:612350829261:instance/i-0d481455d173accb9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d481455d173accb9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyEC2KP_Priv(NEW)",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0618207059a19f879",
            "private_dns": "ip-10-0-3-71.ec2.internal",
            "private_ip": "10.0.3.71",
            "public_dns": "ec2-34-207-131-29.compute-1.amazonaws.com",
            "public_ip": "34.207.131.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01cc55175d72717b1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7ed62df8a6a0c6a",
            "tags": {
              "Name": "App-Server-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08de806cb4423bee5"
            ]
          },
          "dependencies": [
            "aws_security_group.private_security_group",
            "aws_security_group.public_security_group",
            "aws_subnet.private_subnets",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PublicEC2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:612350829261:instance/i-0493eb56c273963e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0493eb56c273963e1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0767218a7d4f36811",
            "private_dns": "ip-10-0-0-106.ec2.internal",
            "private_ip": "10.0.0.106",
            "public_dns": "ec2-34-228-66-230.compute-1.amazonaws.com",
            "public_ip": "34.228.66.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-038adfaa388a4d878",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f714bb3e3ddee3fa",
            "tags": {
              "Name": "Bastion-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0162b402cf8692383"
            ]
          },
          "dependencies": [
            "aws_security_group.public_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:612350829261:instance/i-01136a1df8ad53d6c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01136a1df8ad53d6c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stackkp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08b5d1663c60d8ac0",
            "private_dns": "ip-10-0-1-18.ec2.internal",
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-204-236-222-212.compute-1.amazonaws.com",
            "public_ip": "204.236.222.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-092058a2b8b533dca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6b0a4c5bc3a1e31",
            "tags": {
              "Name": "Bastion-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0162b402cf8692383"
            ]
          },
          "dependencies": [
            "aws_security_group.public_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612350829261:internet-gateway/igw-0df4917572ed851c0",
            "id": "igw-0df4917572ed851c0",
            "owner_id": "612350829261",
            "tags": {
              "Name": "vpc_igw"
            },
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc_ngw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0119cd5e01181c2fc",
            "id": "nat-0d7440c991234e874",
            "network_interface_id": "eni-07cff9b3933a8acd6",
            "private_ip": "10.0.0.20",
            "public_ip": "54.158.56.242",
            "subnet_id": "subnet-0f714bb3e3ddee3fa",
            "tags": {
              "Name": "nat_gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.vpc_eip",
            "aws_internet_gateway.vpc_igw",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085565abc966d2744",
            "id": "nat-081e3711e9cd40708",
            "network_interface_id": "eni-099530f7395c782d0",
            "private_ip": "10.0.1.75",
            "public_ip": "184.73.105.0",
            "subnet_id": "subnet-0a6b0a4c5bc3a1e31",
            "tags": {
              "Name": "nat_gateway-2"
            }
          },
          "dependencies": [
            "aws_eip.vpc_eip",
            "aws_internet_gateway.vpc_igw",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05f6e1a500f2e07ec",
            "owner_id": "612350829261",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d7440c991234e874",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt-1"
            },
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_nat_gateway.vpc_ngw",
            "aws_vpc.vpcmain"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-053349dcc2858825a",
            "owner_id": "612350829261",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-081e3711e9cd40708",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt-2"
            },
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_nat_gateway.vpc_ngw",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b90be18c6209f04f",
            "owner_id": "612350829261",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df4917572ed851c0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0714597a378cd8899",
            "route_table_id": "rtb-05f6e1a500f2e07ec",
            "subnet_id": "subnet-0ffeed2ecf0e3748d"
          },
          "dependencies": [
            "aws_eip.vpc_eip",
            "aws_internet_gateway.vpc_igw",
            "aws_nat_gateway.vpc_ngw",
            "aws_route_table.private_route_table",
            "aws_route_table.public_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0959e7bc9eb711d99",
            "route_table_id": "rtb-053349dcc2858825a",
            "subnet_id": "subnet-0d7ed62df8a6a0c6a"
          },
          "dependencies": [
            "aws_eip.vpc_eip",
            "aws_internet_gateway.vpc_igw",
            "aws_nat_gateway.vpc_ngw",
            "aws_route_table.private_route_table",
            "aws_route_table.public_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0776d125836fdc236",
            "route_table_id": "rtb-05f6e1a500f2e07ec",
            "subnet_id": "subnet-08febc4aa19ddfc51"
          },
          "dependencies": [
            "aws_eip.vpc_eip",
            "aws_internet_gateway.vpc_igw",
            "aws_nat_gateway.vpc_ngw",
            "aws_route_table.private_route_table",
            "aws_route_table.public_route_table",
            "aws_subnet.private_datasubnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f99e2cf6642598f",
            "route_table_id": "rtb-053349dcc2858825a",
            "subnet_id": "subnet-0a4f5268a75e578b9"
          },
          "dependencies": [
            "aws_eip.vpc_eip",
            "aws_internet_gateway.vpc_igw",
            "aws_nat_gateway.vpc_ngw",
            "aws_route_table.private_route_table",
            "aws_route_table.public_route_table",
            "aws_subnet.private_datasubnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0688563c7eece22bd",
            "route_table_id": "rtb-0b90be18c6209f04f",
            "subnet_id": "subnet-0f714bb3e3ddee3fa"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0183c5fe352d3c59e",
            "route_table_id": "rtb-0b90be18c6209f04f",
            "subnet_id": "subnet-0a6b0a4c5bc3a1e31"
          },
          "dependencies": [
            "aws_internet_gateway.vpc_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612350829261:security-group/sg-0e3a914882008f2e4",
            "description": "Internet reaching access for public ec2s",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3a914882008f2e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-security",
            "name_prefix": "",
            "owner_id": "612350829261",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb_public_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612350829261:security-group/sg-08de806cb4423bee5",
            "description": "private security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08de806cb4423bee5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0162b402cf8692383"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "612350829261",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_security_group.public_security_group",
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612350829261:security-group/sg-0162b402cf8692383",
            "description": "public security",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0162b402cf8692383",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "612350829261",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cidr_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_datasubnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612350829261:subnet/subnet-08febc4aa19ddfc51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-08febc4aa19ddfc51",
            "map_public_ip_on_launch": true,
            "owner_id": "612350829261",
            "tags": {
              "Name": "private_datasubnet_1a"
            },
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612350829261:subnet/subnet-0a4f5268a75e578b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0a4f5268a75e578b9",
            "map_public_ip_on_launch": true,
            "owner_id": "612350829261",
            "tags": {
              "Name": "private _datasubnet_1b"
            },
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612350829261:subnet/subnet-0ffeed2ecf0e3748d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ffeed2ecf0e3748d",
            "map_public_ip_on_launch": true,
            "owner_id": "612350829261",
            "tags": {
              "Name": "private_subnet_1a"
            },
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612350829261:subnet/subnet-0d7ed62df8a6a0c6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d7ed62df8a6a0c6a",
            "map_public_ip_on_launch": true,
            "owner_id": "612350829261",
            "tags": {
              "Name": "private_subnet_1b"
            },
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612350829261:subnet/subnet-0f714bb3e3ddee3fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0f714bb3e3ddee3fa",
            "map_public_ip_on_launch": true,
            "owner_id": "612350829261",
            "tags": {
              "Name": "public_subnet_1a"
            },
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612350829261:subnet/subnet-0a6b0a4c5bc3a1e31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a6b0a4c5bc3a1e31",
            "map_public_ip_on_launch": true,
            "owner_id": "612350829261",
            "tags": {
              "Name": "public_subnet_1b"
            },
            "vpc_id": "vpc-0cb09f595170f8e93"
          },
          "dependencies": [
            "aws_vpc.vpcmain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcmain",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612350829261:vpc/vpc-0cb09f595170f8e93",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07a3e8c005b213c40",
            "default_route_table_id": "rtb-0ebc444bb43aa09b2",
            "default_security_group_id": "sg-07b76abd3d707b860",
            "dhcp_options_id": "dopt-de6dd1a4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cb09f595170f8e93",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ebc444bb43aa09b2",
            "owner_id": "612350829261",
            "tags": {
              "Name": "vpcmain"
            }
          }
        }
      ]
    }
  ]
}